@@ -1,3 +1,8 @@
+Development Portal (2017-12-15 shi)
+==============================
+Updated currency span to one line
+
+
 Development Portal (2017-12-06 shi)
 ==============================
 Fix sector/country counts when there are more activities on a SAVi page
